Added a few changes in index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="profile">
         <img class="photo" src="images/lucas.png" alt="Lucas">
         <br><br>
-        <h2>Yo what up.</h2>
+        <h2>Hello there!</h2>
         <p>Name's Lucas, I'm a wannabe computer science rockstar, been working on this area for two years now and really wanna make some change.</p>
         <p>I'm 21 years old and currently living in Uruguay, I speak both english and spanish.</p>
       </div>
@@ -75,15 +75,11 @@
         <div class="skill-row">
           <img class="code" src="images/codigo.png" alt="coding">
           <h3><b>Coding</b></h3><br>
-          <p>I'm a decent coder, although I think I'm an even better web developer.<br> Coding makes me feel motivated but Web Development makes me feel passionate even now that I'm still learning</p>
+          <p>I'm a decent coder, although I think I'm an even better web developer.<br> Coding makes me feel motivated but Web Development makes me feel passionate even though I just started to learn.</p>
           <h4><strong>Technologies</strong></h4>
 
         <table class="table table-bordered" style="margin:auto; padding:auto; width: 60%; height: 20px; border:2;">
           <tbody>
-            <tr>
-              <td>HTML, CSS & Bootstrap</td>
-              <td>★★★☆☆</td>
-            </tr>
             <tr>
               <td>SQL</td>
               <td>★★★★☆</td>
@@ -93,8 +89,8 @@
               <td>★★★☆☆</td>
             </tr>
             <tr>
-              <td>Machine & Deep Learning</td>
-              <td>★☆☆☆☆ <div style="font-size:8px;">
+              <td>HTML, CSS & Bootstrap</td>
+              <td>★★☆☆☆ <div style="font-size:8px;">
               (I'm really interested tho)</div></td>
             </tr>
           </tbody>
